test_case/rust-lang_rust/17401_56225428.rs

trait Foo {}
pub trait Bar: Foo {} // error
